--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 0 3rem;
+  padding: 0 0rem;
   position: relative; }
   .container > :not(:last-child) {
     padding-bottom: 1rem;
@@ -39,9 +39,15 @@ body {
   font-weight: 900; }
 
 .name {
-  font-size: 2.5rem;
-  color: #1136db;
-  text-shadow: 0 2px 0.8rem white; }
+  /*     text-shadow: 0 2px .8rem rgb(5, 5, 5); */
+  font-size: 3.2rem;
+  color: #fefeff;
+  text-shadow: none;
+  background-color: transparent;
+  border: none;
+  font-weight: bold;
+  outline: none;
+  width: 45%; }
 
 .todo-container {
   position: absolute;
@@ -59,12 +65,14 @@ body {
 @media (max-width: 460px) {
   .time {
     font-size: 7rem; }
-  .greeting-header {
+  .greeting-header, .name {
     font-size: 2.5rem; } }
 
 @media (max-width: 334px) {
   .time {
-    font-size: 5rem; } }
+    font-size: 5rem; }
+  .name {
+    width: 60%; } }
 
 @media (max-width: 319px) {
   .name {
@@ -73,5 +81,5 @@ body {
 @media (max-width: 252px) {
   .time {
     font-size: 3.3rem; }
-  .greeting-header .name {
+  .greeting-header, .name {
     font-size: 1.7rem; } }
